// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getData > processes OCR data correctly using NodeJS Tesseract 1`] = `
[
  [
    "Using NodeJS version of Tesseract",
  ],
  [
    "It took '0.000s' to process the image.",
  ],
  [
    "The following text was found through OCR:

Sample OCR text",
  ],
  [
    "OCR Image with found text can be found here:

/fake/path/image.png",
  ],
]
`;

exports[`getData > processes OCR data correctly using NodeJS Tesseract 2`] = `
{
  "dpr": 1,
  "filePath": "/fake/path/image.png",
  "lines": [],
  "text": "Sample OCR text",
  "words": [],
}
`;

exports[`getData > processes OCR data correctly using a haystack 1`] = `
[
  [
    "Using system installed version of Tesseract",
  ],
  [
    "It took '0.000s' to process the image.",
  ],
  [
    "The following text was found through OCR:

Sample OCR text",
  ],
  [
    "OCR Image with found text can be found here:

/fake/path/image.png",
  ],
]
`;

exports[`getData > processes OCR data correctly using a haystack 2`] = `
{
  "dpr": 1,
  "filePath": "/fake/path/image.png",
  "lines": [
    {
      "bbox": undefined,
      "text": "Sample OCR text",
    },
  ],
  "text": "Sample OCR text",
  "words": [
    {
      "bbox": undefined,
      "text": "Sample",
    },
    {
      "bbox": undefined,
      "text": "OCR",
    },
    {
      "bbox": undefined,
      "text": "text",
    },
  ],
}
`;

exports[`getData > processes OCR data correctly using system Tesseract when available 1`] = `
[
  [
    "Using system installed version of Tesseract",
  ],
  [
    "It took '0.000s' to process the image.",
  ],
  [
    "The following text was found through OCR:

Sample OCR text",
  ],
  [
    "OCR Image with found text can be found here:

/fake/path/image.png",
  ],
]
`;

exports[`getData > processes OCR data correctly using system Tesseract when available 2`] = `
{
  "dpr": 1,
  "filePath": "/fake/path/image.png",
  "lines": [
    {
      "bbox": {
        "bottom": 1,
        "left": 1,
        "right": 1,
        "top": 1,
      },
      "text": "Sample OCR text",
    },
  ],
  "text": "Sample OCR text",
  "words": [
    {
      "bbox": {
        "bottom": 1,
        "left": 1,
        "right": 1,
        "top": 1,
      },
      "text": "Sample",
    },
    {
      "bbox": {
        "bottom": 2,
        "left": 2,
        "right": 2,
        "top": 2,
      },
      "text": "OCR",
    },
    {
      "bbox": {
        "bottom": 3,
        "left": 3,
        "right": 3,
        "top": 3,
      },
      "text": "text",
    },
  ],
}
`;

exports[`getData > should handle haystack that requires fetching RectReturn from browser.getElementRect 1`] = `
[
  [
    "Using system installed version of Tesseract",
  ],
  [
    "It took '0.000s' to process the image.",
  ],
  [
    "The following text was found through OCR:

Sample OCR text",
  ],
  [
    "OCR Image with found text can be found here:

/fake/path/image.png",
  ],
]
`;
